--- a/Pima_indian.ipynb
+++ b/Pima_indian.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pima Indians 당노병 예측"
+    "# Pima Indians 당뇨병 예측"
    ]
   },
   {
